applied middlewares and restructured tests for middleware
